--- a/gatsby-version-ps/index.html
+++ b/gatsby-version-ps/index.html
@@ -36,46 +36,32 @@ data-styled.g9[id="Body__BodyWrapper-sc-v34kqr-0"]{content:"oVFRU,"}/*!sc*/
 data-styled.g10[id="Footer__FooterWrapper-sc-1qfqdid-0"]{content:"gUOgk,"}/*!sc*/
 .juihub{margin-top:0;margin-bottom:48px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
 .dsTUYW{margin-top:32px;margin-bottom:48px;border:none;border-bottom:1px solid #e9ecef;}/*!sc*/
-data-styled.g12[id="Divider-sc-1jz0jl-0"]{content:"juihub,dsTUYW,"}/*!sc*/
+data-styled.g13[id="Divider-sc-1jz0jl-0"]{content:"juihub,dsTUYW,"}/*!sc*/
 .fKwLTl{margin-bottom:16px;word-break:break-all;}/*!sc*/
-data-styled.g13[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
+data-styled.g14[id="TagList__TagListWrapper-sc-s1uz5f-0"]{content:"fKwLTl,"}/*!sc*/
 .OSwVR{display:inline-block;padding:9.6px 11.2px;margin-right:8px;margin-bottom:8px;border-radius:50px;background-color:#f1f3f5;color:#404040;-webkit-text-decoration:none;text-decoration:none;font-size:14.4px;-webkit-transition:all 0.2s;transition:all 0.2s;}/*!sc*/
 .OSwVR:hover{background-color:#dee2e6;}/*!sc*/
-data-styled.g14[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
-.cIxGdo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}/*!sc*/
-@media (max-width:768px){.cIxGdo{padding:0 15px;}}/*!sc*/
-data-styled.g24[id="Bio__BioWrapper-sc-5v8ml6-0"]{content:"cIxGdo,"}/*!sc*/
-.ccQIpv{-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;margin-right:16px;width:128px;height:128px;border-radius:999px;background-image:url(https://gyuwseong.github.io/profile.jpeg);background-size:cover;background-position:center;}/*!sc*/
-data-styled.g25[id="Bio__Profile-sc-5v8ml6-1"]{content:"ccQIpv,"}/*!sc*/
-.zdqtp{margin-bottom:4.8px;font-size:24px;font-weight:700;color:#191919;}/*!sc*/
-data-styled.g26[id="Bio__Author-sc-5v8ml6-2"]{content:"zdqtp,"}/*!sc*/
-.hskwiv{margin-bottom:11.2px;line-height:1.5;font-size:16px;color:#404040;}/*!sc*/
-data-styled.g27[id="Bio__Description-sc-5v8ml6-3"]{content:"hskwiv,"}/*!sc*/
-.cZRWgC a{margin-right:9.6px;}/*!sc*/
-.cZRWgC svg{width:25.6px;height:25.6px;cursor:pointer;}/*!sc*/
-.cZRWgC svg path{fill:#868e96;-webkit-transition:fill 0.3s;transition:fill 0.3s;}/*!sc*/
-.cZRWgC a:hover svg path{fill:#191919;}/*!sc*/
-data-styled.g28[id="Bio__LinksWrapper-sc-5v8ml6-4"]{content:"cZRWgC,"}/*!sc*/
+data-styled.g15[id="TagList__TagLink-sc-s1uz5f-1"]{content:"OSwVR,"}/*!sc*/
 .cVaGFY{margin-top:32px;}/*!sc*/
 @media (max-width:768px){.cVaGFY{padding:0 15px;}}/*!sc*/
-data-styled.g33[id="Header__Wrapper-sc-1d3p6ct-0"]{content:"cVaGFY,"}/*!sc*/
+data-styled.g25[id="Header__Wrapper-sc-1d3p6ct-0"]{content:"cVaGFY,"}/*!sc*/
 .dkDUwb{margin-bottom:25.6px;line-height:1.2;font-size:44.8px;font-weight:700;color:#191919;}/*!sc*/
-data-styled.g34[id="Header__ArticleTitle-sc-1d3p6ct-1"]{content:"dkDUwb,"}/*!sc*/
+data-styled.g26[id="Header__ArticleTitle-sc-1d3p6ct-1"]{content:"dkDUwb,"}/*!sc*/
 .jccDiz{margin-bottom:32px;font-size:16px;}/*!sc*/
-data-styled.g35[id="Header__Information-sc-1d3p6ct-2"]{content:"jccDiz,"}/*!sc*/
+data-styled.g27[id="Header__Information-sc-1d3p6ct-2"]{content:"jccDiz,"}/*!sc*/
 .ceAkMY{font-weight:700;color:#191919;}/*!sc*/
-data-styled.g36[id="Header__Author-sc-1d3p6ct-3"]{content:"ceAkMY,"}/*!sc*/
+data-styled.g28[id="Header__Author-sc-1d3p6ct-3"]{content:"ceAkMY,"}/*!sc*/
 .kmPIwO{font-weight:300;color:#404040;}/*!sc*/
-data-styled.g37[id="Header__Date-sc-1d3p6ct-4"]{content:"kmPIwO,"}/*!sc*/
+data-styled.g29[id="Header__Date-sc-1d3p6ct-4"]{content:"kmPIwO,"}/*!sc*/
 .jUHwIM{position:relative;opacity:0;-webkit-transition:0.35s all ease;transition:0.35s all ease;opacity:1;}/*!sc*/
-data-styled.g43[id="RevealOnScroll__StyledWrapper-sc-j177rt-0"]{content:"jUHwIM,"}/*!sc*/
+data-styled.g35[id="RevealOnScroll__StyledWrapper-sc-j177rt-0"]{content:"jUHwIM,"}/*!sc*/
 .cKsOEP{position:absolute;opacity:1;left:100%;}/*!sc*/
 .cKsOEP > div{padding-right:20px;padding-left:16px;margin-left:48px;position:relative;width:240px;max-height:calc(100% - 185px);overflow-y:auto;position:fixed;top:100px;}/*!sc*/
 .cKsOEP > div::-webkit-scrollbar{width:3px;}/*!sc*/
 .cKsOEP > div::-webkit-scrollbar-track{background:#f1f3f5;}/*!sc*/
 .cKsOEP > div::-webkit-scrollbar-thumb{background:#ced4da;}/*!sc*/
 @media (max-width:1300px){.cKsOEP{display:None;}}/*!sc*/
-data-styled.g44[id="Toc__TocWrapper-sc-1axrmab-0"]{content:"cKsOEP,"}/*!sc*/
+data-styled.g36[id="Toc__TocWrapper-sc-1axrmab-0"]{content:"cKsOEP,"}/*!sc*/
 .kOjvPx{font-size:16px;color:#191919;line-height:1.73;overflow:visible;}/*!sc*/
 .kOjvPx h1:first-child,.kOjvPx h2:first-child,.kOjvPx h3:first-child,.kOjvPx h4:first-child{margin-top:0;}/*!sc*/
 .kOjvPx > p,.kOjvPx > ul,.kOjvPx > ol,.kOjvPx table,.kOjvPx blockquote,.kOjvPx img,.kOjvPx .katex-display{margin-top:0;margin-bottom:15px;}/*!sc*/
@@ -124,7 +110,7 @@ data-styled.g44[id="Toc__TocWrapper-sc-1axrmab-0"]{content:"cKsOEP,"}/*!sc*/
 .kOjvPx sup{margin-left:2px;font-size:13px;vertical-align:super;}/*!sc*/
 .kOjvPx sup > a{padding:0 1px;}/*!sc*/
 .kOjvPx .footnotes{margin-top:60px;padding-top:20px;border-top:1px solid #ced4da;font-size:14px;}/*!sc*/
-data-styled.g46[id="StyledMarkdown-sc-lqtcur-0"]{content:"kOjvPx,"}/*!sc*/
+data-styled.g38[id="StyledMarkdown-sc-lqtcur-0"]{content:"kOjvPx,"}/*!sc*/
 code[class*="language-"],pre[class*="language-"]{margin-bottom:24px;font-size:13.5px;color:#eee;background:none;font-family:JetBrains Mono,Monaco,"Andale Mono","Ubuntu Mono",monospace;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none;}/*!sc*/
 pre[class*="language-"]{padding:1em;overflow:auto;}/*!sc*/
 :not(pre) > code[class*="language-"]{padding:0.1em;border-radius:0.3em;white-space:normal;}/*!sc*/
@@ -190,19 +176,33 @@ pre.diff-highlight > code .token.token.inserted:not(.prefix)::selection,pre.diff
 .prism-previewer-angle.prism-previewer-angle circle,.prism-previewer-time.prism-previewer-time circle{stroke:hsl(230,8%,24%);stroke-opacity:1;}/*!sc*/
 .prism-previewer-easing.prism-previewer-easing circle,.prism-previewer-easing.prism-previewer-easing path,.prism-previewer-easing.prism-previewer-easing line{stroke:hsl(230,8%,24%);}/*!sc*/
 .prism-previewer-easing.prism-previewer-easing circle{fill:transparent;}/*!sc*/
-data-styled.g48[id="sc-global-WlSYP1"]{content:"sc-global-WlSYP1,"}/*!sc*/
+data-styled.g40[id="sc-global-WlSYP1"]{content:"sc-global-WlSYP1,"}/*!sc*/
 .bUeHPW{position:relative;margin-bottom:112px;}/*!sc*/
 @media (max-width:768px){.bUeHPW{padding:0 15px;}}/*!sc*/
-data-styled.g49[id="Body__Wrapper-sc-7hat30-0"]{content:"bUeHPW,"}/*!sc*/
+data-styled.g41[id="Body__Wrapper-sc-7hat30-0"]{content:"bUeHPW,"}/*!sc*/
+.cIxGdo{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}/*!sc*/
+@media (max-width:768px){.cIxGdo{padding:0 15px;}}/*!sc*/
+data-styled.g42[id="Bio__BioWrapper-sc-5v8ml6-0"]{content:"cIxGdo,"}/*!sc*/
+.ccQIpv{-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;margin-right:16px;width:128px;height:128px;border-radius:999px;background-image:url(https://gyuwseong.github.io/profile.jpeg);background-size:cover;background-position:center;}/*!sc*/
+data-styled.g43[id="Bio__Profile-sc-5v8ml6-1"]{content:"ccQIpv,"}/*!sc*/
+.zdqtp{margin-bottom:4.8px;font-size:24px;font-weight:700;color:#191919;}/*!sc*/
+data-styled.g44[id="Bio__Author-sc-5v8ml6-2"]{content:"zdqtp,"}/*!sc*/
+.hskwiv{margin-bottom:11.2px;line-height:1.5;font-size:16px;color:#404040;}/*!sc*/
+data-styled.g45[id="Bio__Description-sc-5v8ml6-3"]{content:"hskwiv,"}/*!sc*/
+.cZRWgC a{margin-right:9.6px;}/*!sc*/
+.cZRWgC svg{width:25.6px;height:25.6px;cursor:pointer;}/*!sc*/
+.cZRWgC svg path{fill:#868e96;-webkit-transition:fill 0.3s;transition:fill 0.3s;}/*!sc*/
+.cZRWgC a:hover svg path{fill:#191919;}/*!sc*/
+data-styled.g46[id="Bio__LinksWrapper-sc-5v8ml6-4"]{content:"cZRWgC,"}/*!sc*/
 .becwQW{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;margin-bottom:48px;}/*!sc*/
 @media (max-width:768px){.becwQW{margin-bottom:80px;padding:0 12.8px;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.becwQW > div:first-child{margin-bottom:12.8px;}}/*!sc*/
-data-styled.g50[id="Footer__ArticleButtonContainer-sc-zqxmks-0"]{content:"becwQW,"}/*!sc*/
+data-styled.g47[id="Footer__ArticleButtonContainer-sc-zqxmks-0"]{content:"becwQW,"}/*!sc*/
 .gwQEOy{width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;white-space:nowrap;}/*!sc*/
-data-styled.g51[id="Footer__ArrowFlexWrapper-sc-zqxmks-1"]{content:"gwQEOy,"}/*!sc*/
+data-styled.g48[id="Footer__ArrowFlexWrapper-sc-zqxmks-1"]{content:"gwQEOy,"}/*!sc*/
 .jxGLes{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:flex-end;-webkit-box-align:flex-end;-ms-flex-align:flex-end;align-items:flex-end;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;overflow:hidden;}/*!sc*/
-data-styled.g52[id="Footer__ArticleButtonTextWrapper-sc-zqxmks-2"]{content:"jxGLes,"}/*!sc*/
+data-styled.g49[id="Footer__ArticleButtonTextWrapper-sc-zqxmks-2"]{content:"jxGLes,"}/*!sc*/
 .bhYcVf{position:relative;left:0;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-size:24px;-webkit-flex-basis:24px;-ms-flex-preferred-size:24px;flex-basis:24px;-webkit-transition:left 0.3s;transition:left 0.3s;}/*!sc*/
-data-styled.g53[id="Footer__Arrow-sc-zqxmks-3"]{content:"bhYcVf,"}/*!sc*/
+data-styled.g50[id="Footer__Arrow-sc-zqxmks-3"]{content:"bhYcVf,"}/*!sc*/
 .OEEnV{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-align-items:flex-start;-webkit-box-align:flex-start;-ms-flex-align:flex-start;align-items:flex-start;padding:20.8px 16px;max-width:250px;-webkit-flex-basis:250px;-ms-flex-preferred-size:250px;flex-basis:250px;font-size:17.6px;border-radius:5px;background-color:rgba(0,0,0,0.06);color:#191919;cursor:pointer;-webkit-transition:background-color 0.3s;transition:background-color 0.3s;}/*!sc*/
 .OEEnV:hover{background-color:rgba(0,0,0,0.08);}/*!sc*/
 .OEEnV .Footer__ArrowFlexWrapper-sc-zqxmks-1{-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}/*!sc*/
@@ -217,18 +217,18 @@ data-styled.g53[id="Footer__Arrow-sc-zqxmks-3"]{content:"bhYcVf,"}/*!sc*/
 .cCfvHe .Footer__Arrow-sc-zqxmks-3{margin-left:16px;}/*!sc*/
 .cCfvHe:hover .Footer__Arrow-sc-zqxmks-3{left:2px;}/*!sc*/
 @media (max-width:768px){.cCfvHe{max-width:inherit;-webkit-flex-basis:inherit;-ms-flex-preferred-size:inherit;flex-basis:inherit;}}/*!sc*/
-data-styled.g54[id="Footer__ArticleButtonWrapper-sc-zqxmks-4"]{content:"OEEnV,cCfvHe,"}/*!sc*/
+data-styled.g51[id="Footer__ArticleButtonWrapper-sc-zqxmks-4"]{content:"OEEnV,cCfvHe,"}/*!sc*/
 .hngxZd{margin-bottom:9.6px;font-size:12.8px;}/*!sc*/
-data-styled.g55[id="Footer__ArticleButtonLabel-sc-zqxmks-5"]{content:"hngxZd,"}/*!sc*/
+data-styled.g52[id="Footer__ArticleButtonLabel-sc-zqxmks-5"]{content:"hngxZd,"}/*!sc*/
 .brczfR{padding:2px 0;width:100%;text-overflow:ellipsis;overflow:hidden;}/*!sc*/
-data-styled.g56[id="Footer__ArticleButtonTitle-sc-zqxmks-6"]{content:"brczfR,"}/*!sc*/
+data-styled.g53[id="Footer__ArticleButtonTitle-sc-zqxmks-6"]{content:"brczfR,"}/*!sc*/
 @media (max-width:768px){.cRSPGb{padding:0 15px;}}/*!sc*/
-data-styled.g57[id="Footer__CommentWrapper-sc-zqxmks-7"]{content:"cRSPGb,"}/*!sc*/
+data-styled.g54[id="Footer__CommentWrapper-sc-zqxmks-7"]{content:"cRSPGb,"}/*!sc*/
 .XZnrl{height:200px;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}/*!sc*/
-data-styled.g58[id="Footer__SpinnerWrapper-sc-zqxmks-8"]{content:"XZnrl,"}/*!sc*/
+data-styled.g55[id="Footer__SpinnerWrapper-sc-zqxmks-8"]{content:"XZnrl,"}/*!sc*/
 .yzdKT{height:0px;overflow:hidden;}/*!sc*/
 .ivqWaF{height:auto;overflow:auto;}/*!sc*/
-data-styled.g59[id="Footer__HiddenWrapper-sc-zqxmks-9"]{content:"yzdKT,ivqWaF,"}/*!sc*/
+data-styled.g56[id="Footer__HiddenWrapper-sc-zqxmks-9"]{content:"yzdKT,ivqWaF,"}/*!sc*/
 </style><title data-react-helmet="true">종속성 문제 해결하기</title><link rel="icon" href="/favicon-32x32.png?v=5e118a6452732f3d10fe30d085acda70" type="image/png"/><link rel="manifest" href="/manifest.webmanifest" crossorigin="anonymous"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=5e118a6452732f3d10fe30d085acda70"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=5e118a6452732f3d10fe30d085acda70"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=5e118a6452732f3d10fe30d085acda70"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=5e118a6452732f3d10fe30d085acda70"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=5e118a6452732f3d10fe30d085acda70"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=5e118a6452732f3d10fe30d085acda70"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=5e118a6452732f3d10fe30d085acda70"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=5e118a6452732f3d10fe30d085acda70"/><style type="text/css">
     .heading-anchor.before {
       position: absolute;
@@ -372,6 +372,6 @@ data-styled.g59[id="Footer__HiddenWrapper-sc-zqxmks-9"]{content:"yzdKT,ivqWaF,"}
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-4b3fd2daaa98f081f851.js\"],\"component---src-pages-404-jsx\":[\"/component---src-pages-404-jsx-7fdf3d1b5138b7a32e91.js\"],\"component---src-pages-index-jsx\":[\"/component---src-pages-index-jsx-452842a4b664e39e3cd7.js\"],\"component---src-pages-search-jsx\":[\"/component---src-pages-search-jsx-cd4dc800ed3738793667.js\"],\"component---src-pages-series-jsx\":[\"/component---src-pages-series-jsx-242ca9616321c84d88de.js\"],\"component---src-pages-tags-jsx\":[\"/component---src-pages-tags-jsx-dbd0628441d75ce5475c.js\"],\"component---src-templates-post-jsx\":[\"/component---src-templates-post-jsx-99144ae3c3b90156df0b.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-50799575b7362d4df6e1.js\"],\"component---src-pages-404-jsx\":[\"/component---src-pages-404-jsx-7fdf3d1b5138b7a32e91.js\"],\"component---src-pages-index-jsx\":[\"/component---src-pages-index-jsx-452842a4b664e39e3cd7.js\"],\"component---src-pages-search-jsx\":[\"/component---src-pages-search-jsx-cd4dc800ed3738793667.js\"],\"component---src-pages-series-jsx\":[\"/component---src-pages-series-jsx-242ca9616321c84d88de.js\"],\"component---src-pages-tags-jsx\":[\"/component---src-pages-tags-jsx-dbd0628441d75ce5475c.js\"],\"component---src-templates-post-jsx\":[\"/component---src-templates-post-jsx-99144ae3c3b90156df0b.js\"],\"component---src-templates-series-jsx\":[\"/component---src-templates-series-jsx-8cf187fb6e7c0d350194.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="1565ae4370a58947cca6";</script><script src="/webpack-runtime-f6730b966045b90f1ef4.js" async></script><script src="/framework-31563a7a8c220285a65f.js" async></script><script src="/app-4b3fd2daaa98f081f851.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="c9833c2932f8facb564c";</script><script src="/webpack-runtime-0af98184ec13a4acc9ed.js" async></script><script src="/framework-31563a7a8c220285a65f.js" async></script><script src="/app-50799575b7362d4df6e1.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
